# nonebot-plugin-anime

./: .gitignore  README.md  pyproject.toml
nonebot_plugin_anime/: __init__.py  config.py
nonebot_plugin_anime/core/: __init__.py  anime_api.py  anime_data.py  anime_downloader.py  anime_filter.py  anime_formatting.py  anime_image.py  anime_permissons.py  anime_score.py  anime_session.py  anime_tag.py  anime_time.py
nonebot_plugin_anime/handlers/: __init__.py  cmd_admin.py  cmd_char.py  cmd_random.py  cmd_score.py  cmd_search.py  cmd_season.py  cmd_session.py  cmd_tag.py  cmd_updata.py
