[project]
name = "nonebot-plugin-anime"
version = "1.0.0"
description = "Bangumi 番剧查询机器人插件"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "ShioMI39" }]
classifiers = [
    "Framework :: NoneBot",
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dependencies = [
    "nonebot2>=2.0.0",
    "nonebot-adapter-onebot>=2.0.0",
    "nonebot-plugin-localstore>=0.2",
    "aiohttp>=3.8",
    "Pillow>=10.0",
    "opencc-python-reimplemented>=0.1.7",
    "pydantic>=2.0",
]

[project.entry-points.nonebot]
anime = "nonebot_plugin_anime"

[project.urls]
Homepage = "https://github.com/ShioMI39/nonebot-plugin-anime"
