[project]
name = "nonebot-plugin-anime"
version = "1.0.0"
description = "Bangumi 番剧查询机器人插件"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "ShioMI39" }]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dependencies = [
    "nonebot2>=2.3.0",
    "nonebot-adapter-onebot>=2.0.0",
    "nonebot-plugin-localstore>=0.7",
    "aiohttp>=3.8",
    "Pillow>=10.0",
    "opencc>=1.3.1",
    "pydantic>=2.0",
]

[project.entry-points.nonebot]
anime = "nonebot_plugin_anime"

[project.urls]
Homepage = "https://github.com/ShioMI39/nonebot-plugin-anime"
